# django-flix-api

./: README.md  pyproject.toml  requirements.txt
actors/: admin.py  models.py  serializers.py  urls.py  views.py
actors/management/commands/: import_actors.py
actors/migrations/: 0001_initial.py
app/: permissions.py  settings.py  urls.py
authentication/: urls.py
genres/: permissions.py  serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reviews/: admin.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
